--- a/01-html-css-layout/css/main.css
+++ b/01-html-css-layout/css/main.css
@@ -1,4 +1,4 @@
-* {
+body * {
   box-sizing: border-box;
 }
 
@@ -41,11 +41,19 @@ body {
   color: black;
 }
 
+a[name="north-america"] {
+  border: 5px solid green;
+  display: block;
+  width: 20px;
+  height: 20px;
+  padding: 0;
+}
+
 #main {
   background: #ccc;
 }
 
-#main>section {
+#main > section {
   margin-left: 20%;
   margin-right: 20%;
 }
@@ -77,7 +85,7 @@ article {
 }
 
 /* Clear floats after the columns */
-section:after {
+section::after {
   content: '';
   display: table;
   clear: both;
@@ -110,8 +118,7 @@ aside img {
     width: 100%;
     height: auto;
   }
-
-  #articles {
+  #main > section {
     margin-left: 0;
     margin-right: 0;
   }
