--- a/04-myblogs-rest-es6/css/main.css
+++ b/04-myblogs-rest-es6/css/main.css
@@ -15,6 +15,15 @@ body {
     text-align: center;
 }
 
+.card {
+    margin: 15px;
+}
+
+div.card-image {
+    height: 300px;
+    padding: 20px;
+}
+
 .card-image image {
     width: 90%;
 }
