--- a/07-ts-react/src/TodoItem.css
+++ b/07-ts-react/src/TodoItem.css
@@ -1,12 +1,24 @@
 .TodoItem {
   display: flex;
   justify-content: space-between;
-  width: 90%;
+  column-gap: 15px;
   padding: 5px;
-  background-image: linear-gradient(to bottom right, rgba(185, 185, 185, 0.4), rgba(112, 111, 111, 0));
-  border: 1px solid rgba(200, 200, 200, 0.4)
+  background-image: linear-gradient(
+    to bottom right,
+    rgba(185, 185, 185, 0.4),
+    rgba(112, 111, 111, 0)
+  );
+  border: 1px solid rgba(200, 200, 200, 0.4);
 }
 
 .TodoItem:hover {
-    background-image: linear-gradient(to bottom right, rgba(120, 120, 120, 0.4), rgba(112, 111, 111, 0));
-  }
+  background-image: linear-gradient(
+    to bottom right,
+    rgba(120, 120, 120, 0.4),
+    rgba(112, 111, 111, 0)
+  );
+}
+
+.TodoItem-id {
+    padding-right: 10px;
+}
